fix: change overflow of laptop

--- a/style.css
+++ b/style.css
@@ -1172,6 +1172,7 @@
   font-family: var(--font-comfortaa);
   min-height: 100vh;
   /* overflow: scroll; */
+  overflow: hidden; 
 }
 .laptop{
   margin: auto;
